# FinTech_Joshua_Bas

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: PLAN_backend.md
backend/app/: main.py
backend/app/api/: routes_lender.py  routes_sme.py  store.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/classification/: build_index.py  classifier.py  embedder.py  matcher.py  rag.py
backend/app/services/ingestion/: parser.py
backend/app/services/passport/: assembler.py
backend/app/services/report/: vsme_export.py
backend/app/services/scoring/: scorer.py
backend/data/synthetic/: demo_invoices.csv
backend/data/taxonomy/: building_renovation.txt  energy_efficient_industrial_equipment.txt  energy_efficient_lighting.txt  ev_charging_infrastructure.txt  fossil_fuels.txt  rainwater_harvesting.txt  recycled_metals_manufacturing.txt  solar_energy.txt  water_treatment.txt
backend/tests/: test_classification.py  test_ingestion.py  test_passport.py  test_rag.py  test_scoring.py
frontend/: PLAN.md  app.py  requirements.txt
frontend/components/: __init__.py  esg_display.py  theme.py
frontend/mock/: __init__.py  seed_smes.py
frontend/pages/: 1_SME_Upload.py  2_SME_Dashboard.py  3_SME_Passport.py  4_Lender_View.py
frontend/services/: client.py
greenledger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_synthetic_invoices.py
