[project]
name = "greenledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sentence-transformers",
    "numpy",
    "pydantic",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
