[project]
name = "greenledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sentence-transformers",
    "numpy",
    "pydantic",
    "python-dotenv",
    "httpx",
    "groq",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
